--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,4 +33,4 @@ jobs:
     
     - name: Run Tox
      # Run tox using the version of Python in `PATH`
-      run: tox -e ${{TOX_ENV}}
+      run: tox -e ${{ env.TOX_ENV }}
