--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,11 +30,12 @@ jobs:
       run: pip install tox
       
     - run: |
-        py_ver="${matrix.python-version/./}"
-        ref="py$py_ver-dj${{ matrix.django-version }}"
-        echo "::set-env name=ref::$ref"
+        py_ver=${{ matrix.python-version }}
+        py_ver="${py_ver/./}"
+        test_ver="py$py_ver-dj${{ matrix.django-version }}"
+        echo "::set-env name=test_ver::$test_ver"
       env:
-        TOX_ENV: ${{ github.ref }}
+        TOX_ENV: ${{ github.test_ver }}
     
     - name: Run Tox
      # Run tox using the version of Python in `PATH`
