--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,4 +39,4 @@ jobs:
     
     - name: Run Tox
      # Run tox using the version of Python in `PATH`
-      run: tox -e "py${{ matrix.python-version }}_ver-dj${{ matrix.django-version }}
+      run: tox -e "py${{ matrix.python-version }}-${{ matrix.django-version }}"
