--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Install Tox and any other packages
       run: pip install tox
       
+    - name: Run coverall
+      run: coveralls
+      
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
